Fix some pathing issues with AWS
* `aws-ssh.sh` script had wrong paths in Chapters 8 and 12
* Use `inventory_dir` to find private key for AWS instances as it works
  everywhere
* Also fix deprecated use of `include`

Fixes #9

--- a/setup/roles/aws-instances/templates/aws-ssh.sh.j2
+++ b/setup/roles/aws-instances/templates/aws-ssh.sh.j2
@@ -16,6 +16,6 @@ case $HOST in
 
 esac
 
-ssh_args="-o UserKnownHostsFile=../sshkeys/known_hosts_aws_ansible_k8s"
-ssh_args+=" -i ../sshkeys/id_rsa_aws_ansible_k8s"
+ssh_args="-o UserKnownHostsFile={{ aws_k8s_ssh_dir }}/known_hosts_aws_ansible_k8s"
+ssh_args+=" -i {{ aws_k8s_ssh_dir }}/id_rsa_aws_ansible_k8s"
 ssh $ssh_args ubuntu@$IP
