migrate from Google-hosted package repository to pkgs.k8s.io. Update k8s version to 1.28.0 and update Add-Ons  dependencies.

--- a/setup/roles/k8s/templates/k8s-ver.j2
+++ b/setup/roles/k8s/templates/k8s-ver.j2
@@ -1,6 +1,6 @@
 export K8SV="{{ k8s_version }}-*"
-export calico_url="https://projectcalico.docs.tigera.io/archive/v{{ calico_version }}/manifests/tigera-operator.yaml"
-export longhorn_url="https://raw.githubusercontent.com/longhorn/longhorn/v{{ k8s_longhorn_version }}/deploy/longhorn.yaml"
-export metrics_url="https://github.com/kubernetes-sigs/metrics-server/releases/download/metrics-server-helm-chart-{{ metrics_server_version }}/components.yaml"
-export ingress_url="https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v{{ ingress_version }}/deploy/static/provider/cloud/deploy.yaml"
+export calico_url="https://raw.githubusercontent.com/projectcalico/calico/v{{ calico_version }}/manifests/tigera-operator.yaml"
+export longhorn_url="https://raw.githubusercontent.com/longhorn/longhorn/v{{ k8s_longhorn_version }}/deploy/longhorn.yaml"                    
+export metrics_url="https://github.com/kubernetes-sigs/metrics-server/releases/download/v{{ metrics_server_version }}/components.yaml"
+export ingress_url="https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v{{ ingress_version }}/deploy/static/provider/cloud/deploy.yaml"                 
 export prometheus_url="https://github.com/prometheus-operator/kube-prometheus/archive/refs/heads/release-{{ k8s_prometheus_version }}.zip"
